Small tweaks to dialogs to help prevent overflow issues.

--- a/src/Client/wwwroot/css/app.css
+++ b/src/Client/wwwroot/css/app.css
@@ -139,18 +139,9 @@
     max-height: calc(100% - 2rem);
 }
 
-    .mud-dialog-scrollable > div:not(.mud-dialog-title) {
-        overflow: hidden;
+    .mud-dialog-scrollable > :not(.mud-dialog-title) {
+        overflow: auto;
         max-height: 100%;
         display: flex;
         flex-direction: column;
-    }
-
-    .mud-dialog-scrollable .mud-dialog-content {
-        max-height: 100%;
-        overflow: auto;
-    }
-
-    .mud-dialog-scrollable .mud-popover {
-        position: static;
     }
